--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
                     <label for="" class="form-label">EMAIL-ID</label>
-                    <input type="text" class="form-control" placeholder="EMAIL-ID">
+                    <input type="email" class="form-control" placeholder="EMAIL-ID">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label">ADDRESS</label>
@@ -66,7 +66,7 @@
                     <button class="btn btn-success">REGISTER</button>
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                    <a href="/src/app/signin/signin.component.html">GO TO LOGIN PAGE</a>
+                    <a routerLink ="/signin">GO TO LOGIN PAGE</a>
                 </div>
             </div>
         </div>
